@@ -2,6 +2,7 @@ Changelog file for Login component.
 
 Login 1.5.2
 ====================================
+- Add support for redirectBackParams that can send encoded data through a login/registration process
 - Add a generic validation error in Register to allow for general messages
 - Ensure preHooks run before password validation in ChangePassword snippet
 - Fix issue with placeholderPrefix in UpdateProfile snippet
